aligned --add-exports usage with pom.xml