@@ -16,7 +16,7 @@
 @REM
 
 @REM ----------------------------------------------------------------------------
-@REM Copyright (C) 2011-2020 University of Waikato, Hamilton, NZ
+@REM Copyright (C) 2011-2024 University of Waikato, Hamilton, NZ
 @REM ----------------------------------------------------------------------------
 
 @echo off
@@ -57,6 +57,7 @@ goto wrongcmd
  --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED^
  --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED^
  --add-exports=java.desktop/com.sun.media.sound=ALL-UNNAMED^
+ --add-exports=java.base/sun.nio.cs=ALL-UNNAMED^
  adams.flow.FlowRunner^
  -input "%3"^
  -remote-scripting-engine-cmdline "adams.scripting.engine.DefaultScriptingEngine -port %4"^
