@@ -18,7 +18,7 @@
 #   Copyright (c) 2001-2002 The Apache Software Foundation.  All rights
 #   reserved.
 
-#   Copyright (C) 2011-2018 University of Waikato, Hamilton, NZ
+#   Copyright (C) 2011-2024 University of Waikato, Hamilton, NZ
 
 BASEDIR=`dirname $0`/..
 BASEDIR=`(cd "$BASEDIR"; pwd)`
@@ -41,6 +41,7 @@ then
     --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
     --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED \
     --add-exports=java.desktop/com.sun.media.sound=ALL-UNNAMED \
+    --add-exports=java.base/sun.nio.cs=ALL-UNNAMED \
     adams.flow.FlowRunner \
     -input "$3" \
     -remote-scripting-engine-cmdline "adams.scripting.engine.DefaultScriptingEngine -port $4" \
